--- a/.github/workflows/ecr_ecs_pipeline.yml
+++ b/.github/workflows/ecr_ecs_pipeline.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to ${{ github.event.inputs.environment }} environment
+    name: Deploy images to ${{ github.event.inputs.environment }} environment
     uses: ./.github/workflows/deploy_ecr_ecs_images.yml
     with:
       environment: ${{ github.event.inputs.environment }}
