changed branch to avoid pipeline running every push

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,7 +2,7 @@ name: ECS-HA-failover-website-pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [feature]
   workflow_dispatch:
     inputs:
       environment:
