--- a/.github/workflows/deploy_infrastructure.yml
+++ b/.github/workflows/deploy_infrastructure.yml
@@ -13,16 +13,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # TODO REMOVE LATER
+      - name: Fetch and decode OIDC token
+        id: idtoken
+        run: |
+          TOKEN=$(curl -s -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=sts.amazonaws.com" | jq -r '.value')
+          echo "id_token=$TOKEN" >> $GITHUB_OUTPUT
+
+      - name: Decode token payload
+        run: |
+          echo '${{ steps.idtoken.outputs.id_token }}' | cut -d '.' -f2 | base64 -d | jq
+
       - name: Set up AWS CLI with OIDC Role
         uses: aws-actions/configure-aws-credentials@v3
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: eu-west-2
-
-      # TODO REMOVE LATER
-      - name: Test AWS caller identity
-        if: always()
-        run: aws sts get-caller-identity
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
