--- a/.github/workflows/deploy_infrastructure.yml
+++ b/.github/workflows/deploy_infrastructure.yml
@@ -13,16 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # TODO REMOVE LATER
-      - name: Fetch and decode OIDC token
-        id: idtoken
+      - name: DEBUG REMORE LATER
         run: |
-          TOKEN=$(curl -s -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=sts.amazonaws.com" | jq -r '.value')
-          echo "id_token=$TOKEN" >> $GITHUB_OUTPUT
-
-      - name: Decode token payload
-        run: |
-          echo '${{ steps.idtoken.outputs.id_token }}' | cut -d '.' -f2 | base64 -d | jq
+          echo "${{ secrets.AWS_ROLE_ARN }}"
 
       - name: Set up AWS CLI with OIDC Role
         uses: aws-actions/configure-aws-credentials@v3
