--- a/.github/workflows/infrastructure_pipeline.yml
+++ b/.github/workflows/infrastructure_pipeline.yml
@@ -18,5 +18,6 @@ jobs:
   deploy:
     name: Deploy infra to ${{ github.event.inputs.environment }} environment
     uses: ./.github/workflows/deploy_infrastructure.yml
+    secrets: inherit
     with:
       environment: ${{ github.event.inputs.environment }}
