--- a/.github/workflows/infrastructure_pipeline.yml
+++ b/.github/workflows/infrastructure_pipeline.yml
@@ -14,6 +14,10 @@ on:
           - dev
           - prod
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   deploy:
     name: Deploy infra to ${{ github.event.inputs.environment }} environment
