pipeline changed to use env variables, needs testing

--- a/.github/workflows/infrastructure_pipeline.yml
+++ b/.github/workflows/infrastructure_pipeline.yml
@@ -2,7 +2,7 @@ name: infrastructure-pipeline
 
 on:
   push:
-    branches: [feature]
+    branches: [xx]
   workflow_dispatch:
     inputs:
       environment:
