--- a/.github/workflows/deploy_infrastructure.yml
+++ b/.github/workflows/deploy_infrastructure.yml
@@ -8,32 +8,47 @@ on:
 
 jobs:
   deploy:
-    environment: ${{ inputs.environment }}
+    environment: ${{ inputs.environment }} 
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Load environment configuration
+        id: load-env
+        run: |
+          CONFIG_FILE=".github/workflows/env/${{ inputs.environment }}/env_vars.json"
+          echo "Loading environment variables from $CONFIG_FILE"
+          if [ ! -f "$CONFIG_FILE" ]; then
+            echo "❌ Config file not found: $CONFIG_FILE"
+            exit 1
+          fi
+
+          cat $CONFIG_FILE | jq -r 'to_entries | .[] | "echo \(.key)=\(.value) >> $GITHUB_ENV"' | bash
+
       - name: Set up AWS CLI with OIDC Role
         uses: aws-actions/configure-aws-credentials@v3
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: eu-west-2
+          aws-region: ${{ env.aws_region }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
       - name: Terraform Init
         working-directory: terraform-infrastructure
-        run: terraform init
+        run: terraform init \
+          -backend-config="bucket=${tf_backend_bucket}" \
+          -backend-config="key=${tf_backend_key}" \
+          -backend-config="region=${aws_region}"
 
       - name: Terraform Plan
         working-directory: terraform-infrastructure
-        run: terraform plan
+        run: terraform plan -var="region=${aws_region}" -var="environment=${environment}"
 
       - name: Terraform Apply
         working-directory: terraform-infrastructure
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -var="region=${aws_region}" -var="environment=${environment}"
 
       - name: Get Terraform Outputs
         uses: actions/upload-artifact@v4
