terraform added dynamodb to pipeline

--- a/.github/workflows/deploy_infrastructure.yml
+++ b/.github/workflows/deploy_infrastructure.yml
@@ -40,7 +40,8 @@ jobs:
         run: terraform init \
           -backend-config="bucket=${tf_backend_bucket}" \
           -backend-config="key=${tf_backend_key}" \
-          -backend-config="region=${aws_region}"
+          -backend-config="region=${aws_region}" \
+          -backend-config="dynamodb_table={tf_dynamodb_table}"
 
       - name: Terraform Plan
         working-directory: terraform-infrastructure
