--- a/.github/workflows/infrastructure_pipeline.yml
+++ b/.github/workflows/infrastructure_pipeline.yml
@@ -2,7 +2,8 @@ name: infrastructure-pipeline
 
 on:
   push:
-    branches: [xx]
+    branches: [xx] # change to main or desidered branch
+    tags: ['v*']
   workflow_dispatch:
     inputs:
       environment:
@@ -24,4 +25,5 @@ jobs:
     uses: ./.github/workflows/deploy_infrastructure.yml
     secrets: inherit
     with:
-      environment: ${{ github.event.inputs.environment }}
+      environment: ${{ 
+        github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && 'prod' || github.event.inputs.environment }}
