pipeline runs in prod on tag created, needs testing

--- a/.github/workflows/infrastructure_pipeline.yml
+++ b/.github/workflows/infrastructure_pipeline.yml
@@ -25,7 +25,4 @@ jobs:
     uses: ./.github/workflows/deploy_infrastructure.yml
     secrets: inherit
     with:
-      environment: ${{ 
-        github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && 'prod' || github.event.inputs.environment }}
-
-        
+      environment: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && 'prod' || github.event.inputs.environment }}
