--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -1,16 +1,18 @@
 name: Build and Deploy to ECS
-
 on:
-  push:
-    branches: [ main ]
+  workflow_call:
+    inputs:
+      environment:
+        required: true
+        type: string
 
 env:
-  AWS_REGION: eu-west-1
-  ECR_REPO_BACKEND: my-backend-repo
-  ECR_REPO_FRONTEND: my-frontend-repo
-  ECS_CLUSTER: my-ecs-cluster
-  ECS_SERVICE_BACKEND: my-backend-service
-  ECS_SERVICE_FRONTEND: my-frontend-service
+  AWS_REGION: eu-west-2
+  ECR_REPO_BACKEND: backend-repo
+  ECR_REPO_FRONTEND: frontend-repo
+  ECS_CLUSTER: ecs-cluster
+  ECS_SERVICE_BACKEND: backend-service
+  ECS_SERVICE_FRONTEND: frontend-service
 
 jobs:
   build-and-deploy:
@@ -23,8 +25,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
