--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.111.1
 uvicorn[standard]==0.23.2
-boto3==1.32.0
+boto3
 pytest==7.4.2
-httpx==1.7.1
+httpx
 psycopg2-binary==2.9.9
 sqlalchemy==2.0.20    
