--- a/.github/workflows/app_deployment_pipeline.yml
+++ b/.github/workflows/app_deployment_pipeline.yml
@@ -19,5 +19,6 @@ jobs:
   deploy:
     name: Deploy images to ${{ github.event.inputs.environment }} environment
     uses: ./.github/workflows/deploy_app.yml
+    secrets: inherit
     with:
       environment: ${{ github.event.inputs.environment }}
