--- a/.github/workflows/app_deployment_pipeline.yml
+++ b/.github/workflows/app_deployment_pipeline.yml
@@ -21,4 +21,4 @@ jobs:
     uses: ./.github/workflows/deploy_app.yml
     secrets: inherit
     with:
-      environment: ${{ github.event.inputs.environment }}
+      environment: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && 'prod' || github.event.inputs.environment }}
