--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -55,11 +55,18 @@ jobs:
           terraform_version: 1.9.0
 
       - name: Terraform init
-        working-directory: infra
+        working-directory: terraform-ecs-image-update
         run: terraform init
 
+      - name: Terraform plan
+        working-directory: terraform-ecs-image-update
+        env:
+          TF_VAR_backend_image: ${{ env.BACKEND_IMAGE }}
+          TF_VAR_frontend_image: ${{ env.FRONTEND_IMAGE }}
+        run: terraform plan
+
       - name: Terraform apply
-        working-directory: infra
+        working-directory: terraform-ecs-image-update
         env:
           TF_VAR_backend_image: ${{ env.BACKEND_IMAGE }}
           TF_VAR_frontend_image: ${{ env.FRONTEND_IMAGE }}
