--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -6,6 +6,7 @@ on:
         required: true
         type: string
 
+# TODO : Move common environment variables to a central location
 env:
   AWS_REGION: eu-west-2
   ECR_REPO_BACKEND: backend-repo
@@ -22,6 +23,18 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+
+      - name: Load environment configuration
+        id: load-env
+        run: |
+          CONFIG_FILE=".github/workflows/env/${{ inputs.environment }}/env_vars.json"
+          echo "Loading environment variables from $CONFIG_FILE"
+          if [ ! -f "$CONFIG_FILE" ]; then
+            echo "❌ Config file not found: $CONFIG_FILE"
+            exit 1
+          fi
+
+          cat $CONFIG_FILE | jq -r 'to_entries | .[] | "echo \(.key)=\(.value) >> $GITHUB_ENV"' | bash
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
