private alb + image pipeline

--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -84,8 +84,10 @@ jobs:
           -var="region=${AWS_REGION}" \
           -var="environment=${{ inputs.environment }}" \
           -var="project_name=${TF_PROJECT_NAME}" \
-          -var="backend_image=${BACKEND_IMAGE}" \
-          -var="frontend_image=${FRONTEND_IMAGE}"
+          -var="backend_image_uri=${BACKEND_IMAGE}" \
+          -var="frontend_image_uri=${FRONTEND_IMAGE}" \
+          -var="service_backend_name=${ECS_SERVICE_BACKEND_NAME}" \
+          -var="service_frontend_name=${ECS_SERVICE_FRONTEND_NAME}"
 
       - name: Terraform Apply
         working-directory: terraform-ecs-image-update
@@ -93,8 +95,10 @@ jobs:
           -var="region=${AWS_REGION}" \
           -var="environment=${{ inputs.environment }}" \
           -var="project_name=${TF_PROJECT_NAME}" \
-          -var="backend_image=${BACKEND_IMAGE}" \
-          -var="frontend_image=${FRONTEND_IMAGE}"
+          -var="backend_image_uri=${BACKEND_IMAGE}" \
+          -var="frontend_image_uri=${FRONTEND_IMAGE}" \
+          -var="service_backend_name=${ECS_SERVICE_BACKEND_NAME}" \
+          -var="service_frontend_name=${ECS_SERVICE_FRONTEND_NAME}"
 
       - name: Get Terraform Outputs
         uses: actions/upload-artifact@v4
