--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -50,9 +50,9 @@ jobs:
           # ECR_REPO="$2"
           # REGISTRY="$3"
           # APP_PATH="$4"
-          # IMAGE_URI="$5"
+          # IMAGE_URI="$5"
           chmod +rwx ./.github/scripts/build_push_image_to_ecr.sh
-          ./.github/scripts/build_push_image_to_ecr.sh $BACKEND_TAG $ECR_REPO_BACKEND $REGISTRY app/backend backend_image_uri
+          ./.github/scripts/build_push_image_to_ecr.sh $BACKEND_TAG $ECR_REPO_BACKEND $REGISTRY app/backend BACKEND_IMAGE
 
       - name: Build and push Frontend image
         run: |
@@ -67,7 +67,7 @@ jobs:
           # APP_PATH="$4"
           # IMAGE_URI="$5"
           chmod +rwx ./.github/scripts/build_push_image_to_ecr.sh
-          ./.github/scripts/build_push_image_to_ecr.sh $FRONTEND_TAG $ECR_REPO_FRONTEND $REGISTRY app/frontend frontend_image_uri
+          ./.github/scripts/build_push_image_to_ecr.sh $FRONTEND_TAG $ECR_REPO_FRONTEND $REGISTRY app/frontend FRONTEND_IMAGE
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
