--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,18 +1,13 @@
 FROM node:20-alpine AS build
-
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm install
-
 COPY . .
-
+ARG REACT_APP_API_BASE_URL
+ENV REACT_APP_API_BASE_URL=$REACT_APP_API_BASE_URL
 RUN npm run build
 
 FROM nginx:alpine
-
 COPY --from=build /app/build /usr/share/nginx/html
-
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
