--- a/.github/workflows/app_deployment_pipeline.yml
+++ b/.github/workflows/app_deployment_pipeline.yml
@@ -14,9 +14,9 @@ on:
           - dev
           - prod
       app_version:
-        description: 'App version to deploy (e.g., dev-v1.0.0)'
+        description: 'App version to deploy (e.g., v1.0.0)'
         required: true
-        default: 'dev-v1.0.0'
+        default: 'v1.0.0'
         type: string
 
 permissions:
