--- a/.github/workflows/deploy_infrastructure.yml
+++ b/.github/workflows/deploy_infrastructure.yml
@@ -41,11 +41,19 @@ jobs:
 
       - name: Terraform Plan
         working-directory: terraform-infrastructure
-        run: terraform plan -var="region=${AWS_REGION}" -var="environment=${{ inputs.environment }}" -var="project_name=${TF_PROJECT_NAME}"
+        run: terraform plan \ 
+          -var="region=${AWS_REGION}" \
+          -var="environment=${{ inputs.environment }}" \
+          -var="project_name=${TF_PROJECT_NAME}" \
+          -var="ecs_cluster_name=${{ ECS_CLUSTER_NAME }}"
 
       - name: Terraform Apply
         working-directory: terraform-infrastructure
-        run: terraform apply -auto-approve -var="region=${AWS_REGION}" -var="environment=${{ inputs.environment }}" -var="project_name=${TF_PROJECT_NAME}"
+        run: terraform apply -auto-approve \
+          -var="region=${AWS_REGION}" \
+          -var="environment=${{ inputs.environment }}" \
+          -var="project_name=${TF_PROJECT_NAME}" \
+          -var="ecs_cluster_name=${{ ECS_CLUSTER_NAME }}"
 
       - name: Get Terraform Outputs
         uses: actions/upload-artifact@v4
