pipeline env var bug fix

--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -87,7 +87,7 @@ jobs:
           -var="frontend_image_uri=${FRONTEND_IMAGE}" \
           -var="service_backend_name=${ECS_SERVICE_BACKEND_NAME}" \
           -var="service_frontend_name=${ECS_SERVICE_FRONTEND_NAME}" \
-          -var="ecs_cluster_name=${{ ECS_CLUSTER_NAME }}"
+          -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
 
       - name: Terraform Apply
         working-directory: terraform-ecs-image-update
@@ -99,7 +99,7 @@ jobs:
           -var="frontend_image_uri=${FRONTEND_IMAGE}" \
           -var="service_backend_name=${ECS_SERVICE_BACKEND_NAME}" \
           -var="service_frontend_name=${ECS_SERVICE_FRONTEND_NAME}" \
-          -var="ecs_cluster_name=${{ ECS_CLUSTER_NAME }}"
+          -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
 
       - name: Get Terraform Outputs
         uses: actions/upload-artifact@v4
