--- a/.github/workflows/deploy_infrastructure.yml
+++ b/.github/workflows/deploy_infrastructure.yml
@@ -45,7 +45,7 @@ jobs:
           -var="region=${AWS_REGION}" \
           -var="environment=${{ inputs.environment }}" \
           -var="project_name=${TF_PROJECT_NAME}" \
-          -var="ecs_cluster_name=${{ ECS_CLUSTER_NAME }}"
+          -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
 
       - name: Terraform Apply
         working-directory: terraform-infrastructure
@@ -53,7 +53,7 @@ jobs:
           -var="region=${AWS_REGION}" \
           -var="environment=${{ inputs.environment }}" \
           -var="project_name=${TF_PROJECT_NAME}" \
-          -var="ecs_cluster_name=${{ ECS_CLUSTER_NAME }}"
+          -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
 
       - name: Get Terraform Outputs
         uses: actions/upload-artifact@v4
