added | to commands

--- a/.github/workflows/deploy_infrastructure.yml
+++ b/.github/workflows/deploy_infrastructure.yml
@@ -33,27 +33,30 @@ jobs:
 
       - name: Terraform Init
         working-directory: terraform-infrastructure
-        run: terraform init \
-          -backend-config="bucket=${TF_BACKEND_BUCKET}" \
-          -backend-config="key=${TF_BACKEND_KEY}" \
-          -backend-config="region=${AWS_REGION}" \
-          -backend-config="dynamodb_table=${TF_DYNAMODB_TABLE}"
+        run: |
+          terraform init \
+            -backend-config="bucket=${TF_BACKEND_BUCKET}" \
+            -backend-config="key=${TF_BACKEND_KEY}" \
+            -backend-config="region=${AWS_REGION}" \
+            -backend-config="dynamodb_table=${TF_DYNAMODB_TABLE}"
 
       - name: Terraform Plan
         working-directory: terraform-infrastructure
-        run: terraform plan \ 
-          -var="region=${AWS_REGION}" \
-          -var="environment=${{ inputs.environment }}" \
-          -var="project_name=${TF_PROJECT_NAME}" \
-          -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
+        run: |
+          terraform plan \ 
+            -var="region=${AWS_REGION}" \
+            -var="environment=${{ inputs.environment }}" \
+            -var="project_name=${TF_PROJECT_NAME}" \
+            -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
 
       - name: Terraform Apply
         working-directory: terraform-infrastructure
-        run: terraform apply -auto-approve \
-          -var="region=${AWS_REGION}" \
-          -var="environment=${{ inputs.environment }}" \
-          -var="project_name=${TF_PROJECT_NAME}" \
-          -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
+        run: |
+          terraform apply -auto-approve \
+            -var="region=${AWS_REGION}" \
+            -var="environment=${{ inputs.environment }}" \
+            -var="project_name=${TF_PROJECT_NAME}" \
+            -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
 
       - name: Get Terraform Outputs
         uses: actions/upload-artifact@v4
