added service name in env vars

--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -87,8 +87,8 @@ jobs:
             -var="project_name=${TF_PROJECT_NAME}" \
             -var="backend_image_uri=${BACKEND_IMAGE}" \
             -var="frontend_image_uri=${FRONTEND_IMAGE}" \
-            -var="service_backend_name=${ECS_SERVICE_BACKEND_NAME}" \
-            -var="service_frontend_name=${ECS_SERVICE_FRONTEND_NAME}" \
+            -var="backend_service_name=${ECS_SERVICE_BACKEND_NAME}" \
+            -var="frontend_service_name=${ECS_SERVICE_FRONTEND_NAME}" \
             -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
 
       - name: Terraform Apply
@@ -100,8 +100,8 @@ jobs:
             -var="project_name=${TF_PROJECT_NAME}" \
             -var="backend_image_uri=${BACKEND_IMAGE}" \
             -var="frontend_image_uri=${FRONTEND_IMAGE}" \
-            -var="service_backend_name=${ECS_SERVICE_BACKEND_NAME}" \
-            -var="service_frontend_name=${ECS_SERVICE_FRONTEND_NAME}" \
+            -var="backend_service_name=${ECS_SERVICE_BACKEND_NAME}" \
+            -var="frontend_service_name=${ECS_SERVICE_FRONTEND_NAME}" \
             -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
 
       - name: Get Terraform Outputs
