--- a/.github/workflows/deploy_infrastructure.yml
+++ b/.github/workflows/deploy_infrastructure.yml
@@ -47,6 +47,8 @@ jobs:
             -var="region=${AWS_REGION}" \
             -var="environment=${{ inputs.environment }}" \
             -var="project_name=${TF_PROJECT_NAME}" \
+            -var="backend_service_name=${ECS_SERVICE_BACKEND_NAME}" \
+            -var="frontend_service_name=${ECS_SERVICE_FRONTEND_NAME}" \
             -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
 
       - name: Terraform Apply
@@ -56,6 +58,8 @@ jobs:
             -var="region=${AWS_REGION}" \
             -var="environment=${{ inputs.environment }}" \
             -var="project_name=${TF_PROJECT_NAME}" \
+            -var="backend_service_name=${ECS_SERVICE_BACKEND_NAME}" \
+            -var="frontend_service_name=${ECS_SERVICE_FRONTEND_NAME}" \
             -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
 
       - name: Get Terraform Outputs
