--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -89,7 +89,7 @@ jobs:
             -var="frontend_image_uri=${FRONTEND_IMAGE}" \
             -var="backend_service_name=${ECS_SERVICE_BACKEND_NAME}" \
             -var="frontend_service_name=${ECS_SERVICE_FRONTEND_NAME}" \
-            -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
+            -var="cluster_name=${ECS_CLUSTER_NAME}"
 
       - name: Terraform Apply
         working-directory: terraform-ecs-image-update
@@ -102,7 +102,7 @@ jobs:
             -var="frontend_image_uri=${FRONTEND_IMAGE}" \
             -var="backend_service_name=${ECS_SERVICE_BACKEND_NAME}" \
             -var="frontend_service_name=${ECS_SERVICE_FRONTEND_NAME}" \
-            -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
+            -var="cluster_name=${ECS_CLUSTER_NAME}"
 
       - name: Get Terraform Outputs
         uses: actions/upload-artifact@v4
