splitting state file for pipelines + tf destroy

--- a/.github/workflows/tf_destroy.yml
+++ b/.github/workflows/tf_destroy.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Terraform Destroy
         working-directory: ${{ inputs.working_directory }}
         run: |
-          terraform destroy -lock=false \
+          terraform destroy -lock=false -auto-approve \
             -var="region=${AWS_REGION}" \
             -var="environment=${{ inputs.environment }}" \
             -var="project_name=${TF_PROJECT_NAME}" \
@@ -46,3 +46,4 @@ jobs:
             -var="backend_ecr_repo_name=${ECR_REPO_BACKEND_NAME}" \
             -var="frontend_ecr_repo_name=${ECR_REPO_FRONTEND_NAME}" \
             -var="ecs_cluster_name=${ECS_CLUSTER_NAME}"
+            
