--- a/.github/workflows/tf_destroy.yml
+++ b/.github/workflows/tf_destroy.yml
@@ -33,6 +33,12 @@ jobs:
           chmod +rwx ./.github/scripts/set_env_vars.sh
           ./.github/scripts/set_env_vars.sh ${{ inputs.environment }}
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ${{ env.AWS_REGION }}
+
       - name: Terraform Init
         working-directory: ${{ inputs.working_directory }}
         run: |
