--- a/.github/workflows/tf_destroy.yml
+++ b/.github/workflows/tf_destroy.yml
@@ -18,6 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
 
+    permissions:
+      id-token: write
+      contents: read
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
