--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -74,9 +74,9 @@ jobs:
         run: |
           terraform init \
             -backend-config="bucket=${TF_BACKEND_BUCKET}" \
-            -backend-config="key=${TF_BACKEND_KEY}" \
+            -backend-config="key=${TF_BACKEND_DEPLOY_APP_KEY}" \
             -backend-config="region=${AWS_REGION}" \
-            -backend-config="dynamodb_table=${TF_DYNAMODB_TABLE}"
+            -backend-config="dynamodb_table=${TF_DYNAMODB_DEPLOY_APP_TABLE}"
 
       - name: Terraform Plan
         working-directory: terraform-ecs-image-update
